2020-01-24  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 1.0.0.

	* src/main/java/ball/maven/wagon/providers/GSUtilWagon.java:
	Re-implemented with com.google.cloud.storage.Storage.

2020-01-23  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/maven/wagon/providers/S3UtilWagon.java:
	Initial writing.

2017-07-09  Allen D. Ball  <ball@sol.local>

	* Removed dependency on ball:ball-util.

	* src/main/java/ball/maven/wagon/providers/GSUtilWagon.java:
	Initial writing.
